fix text align

--- a/public/style.css
+++ b/public/style.css
@@ -146,14 +146,13 @@
 }
 /* Place text in the middle of the image */
 .hero-text{
-    text-align: center;
     position: absolute;
-    top: 40%;
     left: 50%;
-    width: 100%;
-    height: 100%;
+    top: 50%;
     transform: translate(-50%, -50%);
-    color: white;
+    color:white;
+    padding: 10px;
+    text-align:center;
 }
 
 #start{
@@ -191,6 +190,7 @@
 #header.ctrl{
     width:100%;
 }
+
 
 #header h1 {
     font-weight: 900;
